other/a/allowed-label-changes/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
  labels:
    foo: bar
spec:
  containers:
  - name: nginx
    image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
  labels:
    breakglass: one
spec:
  containers:
  - name: busybox
    image: registry.corp/sdf3vhadfa:1.28
