other/a/allowed-label-changes/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: allowed-label-changes
policies:
- allowed-label-changes.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: allowed-label-changes
  resources:
  - badpod01
  result: fail
  rule: safe-label
- kind: Pod
  policy: allowed-label-changes
  resources:
  - goodpod01
  result: pass
  rule: safe-label
variables: values.yaml
